concord_macros/tests/dsl/fail/fail_auth_in_route_fmt.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client AuthRouteFmtApi {
        base "https://example.com"
    }

    GET Ping
    path [fmt["prefix-", auth.token]]
    -> Text<String>
}

fn main() {}
