concord_macros/tests/dsl/fail/fail_auth_in_route_fmt.stderr
error: auth references are not allowed in public route expressions; use an auth declaration/use instead
  --> tests/dsl/fail/fail_auth_in_route_fmt.rs:10:26
   |
10 |     path [fmt["prefix-", auth.token]]
   |                          ^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_auth_in_route_fmt.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
